--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -20,6 +20,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_redux: ^0.5.0
+
+  smooth_star_rating: 1.0.3
+
+  cloud_firestore: ^0.12.6
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
